--- a/Develop/client/package.json
+++ b/Develop/client/package.json
@@ -11,7 +11,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "apollo-server": "^3.13.0",
     "bootstrap": "^5.2.3",
+    "graphql": "^16.8.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
